--- a/src/assets/change.css
+++ b/src/assets/change.css
@@ -5,6 +5,7 @@
 
 body {
     background-color: gold;
+    text-align: center;
 }
 
 h1 {
@@ -12,4 +13,5 @@ h1 {
     margin-top: 100px;
     font-size: 40px;
     color: black;
+    margin-bottom: 20px;
 }
